--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,26 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 /Assets/Firebase/Plugins/x86_64/FirebaseCppApp-11_9_0.bundle
 /Assets/Firebase/Plugins/x86_64/FirebaseCppApp-11_9_0.so
+/Assets/Firebase/Plugins/x86_64/FirebaseCppApp-11_9_0.bundle.meta
+/Assets/Firebase/Plugins/x86_64/FirebaseCppApp-11_9_0.so.meta
+/Assets/Firebase/Plugins/x86_64/FirebaseCppApp-12_1_0.bundle
+/Assets/Firebase/Plugins/x86_64/FirebaseCppApp-12_1_0.so
+/Assets/Firebase/Plugins/x86_64/FirebaseCppApp-12_1_0.bundle.meta
+/Assets/Firebase/Plugins/x86_64/FirebaseCppApp-12_1_0.so.meta
+/Assets/Firebase/Plugins/x86_64/FirebaseCppApp-12_10_0.bundle
+/Assets/Firebase/Plugins/x86_64/FirebaseCppApp-12_10_0.so
+/Assets/Firebase/Plugins/x86_64/FirebaseCppApp-12_10_0.bundle.meta
+/Assets/Firebase/Plugins/x86_64/FirebaseCppApp-12_10_0.so.meta
+/Assets/Firebase/Plugins/x86_64/FirebaseCppApp-12_5_0.bundle
+/Assets/Firebase/Plugins/x86_64/FirebaseCppApp-12_5_0.so
+/Assets/Firebase/Plugins/x86_64/FirebaseCppApp-12_5_0.dll
+/Assets/Firebase/Plugins/x86_64/FirebaseCppApp-12_5_0.bundle.meta
+/Assets/Firebase/Plugins/x86_64/FirebaseCppApp-12_5_0.so.meta
+/Assets/Firebase/Plugins/x86_64/FirebaseCppApp-12_7_0.bundle
+/Assets/Firebase/Plugins/x86_64/FirebaseCppApp-12_7_0.so
+/Assets/Firebase/Plugins/x86_64/FirebaseCppApp-12_7_0.bundle.meta
+/Assets/Firebase/Plugins/x86_64/FirebaseCppApp-12_7_0.so.meta
+/Assets/Firebase/Plugins/x86_64/FirebaseCppApp-12_9_0.bundle
+/Assets/Firebase/Plugins/x86_64/FirebaseCppApp-12_9_0.so
+/Assets/Firebase/Plugins/x86_64/FirebaseCppApp-12_9_0.bundle.meta
+/Assets/Firebase/Plugins/x86_64/FirebaseCppApp-12_9_0.so.meta
